--- a/src/index.css
+++ b/src/index.css
@@ -28,8 +28,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  /* min-width: 320px;
+  min-height: 100vh; */
 }
 
 h1 {
